# o3de-release-notes-generator

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  generate_sbom.py  pyproject.toml  release_notes.py  sbom.cdx.json
.github/workflows/: sbom.yml  test.yml
reports/: 26050_release_notes.md  26050_release_notes_pointrelease_audit.md  release_data.json
reports/hints/: 26050_summary_hint.md  prior_release_themes.txt
tests/: test_release_notes.py
